--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       run: |
         git remote add publisher https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        git push publisher website --force
+        git push publisher master --force
