--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://971103.xyz/"
 languageCode = "en-us"
-title = "is Yundong111"
+title = "is Yundo1ng111"
 theme = "rocinante-2"
 paginate = 9999
 summaryLength = 0
