--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://971103.xyz/"
+baseURL = "https://isyundong.github.io"
 languageCode = "en-us"
 title = "is Yundo1ng1111"
 theme = "rocinante-2"
