--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "https://isyundong.github.io"
+baseURL = "https://971103.xyz"
 languageCode = "en-us"
-title = "is Yundo1ng1111"
+title = "Home"
 theme = "rocinante-2"
 paginate = 9999
 summaryLength = 0
