--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ This is my home on the internet. Come, have a tour. Please leave your shoes at t
 
 I work with technology for a living - mostly as a software engineer. Some details are available in the resume below. In addition, I'm interested in filmmaking, tinkering with electronics, and building a decentralized internet.
 
-I also like trees.
+💖 I Love Dota2, Music, Art, World
 
 Email me if you'd like to work together. _Or if you just wanna chat._
 <br>
