--- a/config.toml
+++ b/config.toml
@@ -28,5 +28,7 @@ I'm a software engineer by profession, with a passion for learning new things, t
 
 💖 I love dota2, music, art, and the world we live in.
 If you're interested in collaborating, _or if you just want to chat, feel free to <a href="mailto:yundongzhang97@gmail.com">email</a> me!_
+
+⚙️ My ides: <b><a href="https://ipscaner.com" target="_blank" rel="noopener noreferrer">ipscaner.com</a></b>
 <br>
 """
