--- a/config.toml
+++ b/config.toml
@@ -26,9 +26,9 @@ and this is my little corner of the internet. Feel free to take a look around, b
 
 I'm a software engineer by profession, with a passion for learning new things, tinkering with electronics, and working on building a decentralized internet.
 
-💖 I love dota2, music, art, and the world we live in.
+I love dota2, music, art, and the world we live in.
 If you're interested in collaborating, _or if you just want to chat, feel free to <a href="mailto:yundongzhang97@gmail.com">email</a> me!_
 
-⚙️ My ides: <b><a href="https://ipscaner.com" target="_blank" rel="noopener noreferrer">ipscaner.com</a></b>
+<a style="text-decoration-line: underline; text-decoration-style: wavy;" href="https://ipscaner.com" target="_blank" rel="noopener noreferrer">ipscaner.com</a>
 <br>
 """
